# Botdiscord

./: .env.example  .gitignore  QUICKSTART.md  README.en.md  README.md  config.py  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
commands/: __init__.py  moderation.py  music_commands.py  slash_commands.py  utility.py
skills/: __init__.py  assistant.py  command_tracker.py  greeting.py  internet_search.py  learning.py  music.py  time_skill.py  user_preferences.py  weather.py
tests/: test_assistant.py  test_command_tracker.py  test_greeting.py  test_greeting_extended.py  test_internet_search.py  test_learning.py  test_persistence.py  test_skills.py  test_time_skill.py  test_user_preferences.py
utils/: __init__.py  helpers.py  logger.py  persistence.py
