[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "botdiscord"
version = "1.0.0"
description = "Advanced Discord bot with AI, music, moderation, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "discord.py[voice]==2.4.0",
    "openai==1.54.0",
    "httpx<0.28",
    "python-dotenv==1.0.0",
    "aiohttp==3.9.0",
    "yt-dlp>=2024.0",
    "PyNaCl>=1.5.0",
    "audioop-lts>=0.2.2",
]

[tool.setuptools.packages.find]
include = ["commands", "skills", "utils", "commands.*", "skills.*", "utils.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
